[metadata]
name = denmune
version = 0.0.9.1
author = Mohamed Ali Abbas
author_email = mohamed.alyabbas@outlook.com
description = This is the package for DenMune Clustering Algorithm published in paper https://doi.org/10.1016/j.patcog.2020.107589
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/egy1st/denmune-clustering-algorithm
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
